--- a/OracleJETApplication/templates/profile.tmpl.html
+++ b/OracleJETApplication/templates/profile.tmpl.html
@@ -43,18 +43,18 @@
                 <li>
                     <h4>Home Store</h4>
 <!--                    <span data-bind="text: personProfile().homeStore"></span>-->                   
-                    <a data-bind="click: $parents[0].handleOpen('#homeStoreDialog')">transfer <i class="fa fa-share"></i></a>
-                </li>
+                    <a data-bind="click: handleOpen('#homeStoreDialog')">transfer <i class="fa fa-share"></i></a>
+                    
                 <li>
                     <h4>Hire Status</h4>
                     <span data-bind="text: personProfile().hireStatus"></span>
-                    <a data-bind="click: $parents[0].handleOpen('#hireStatusDialog')">update</a>
+                    <a data-bind="click: handleOpen('#hireStatusDialog')">update</a>
 
                 </li>
                 <li>
                     <h4>External Payroll ID</h4>
                     <span data-bind="text: personProfile().externalPayrollId"></span>
-                    <a data-bind="click: $parents[0].handleOpen('#externalPayrollDialog')">edit <i class="fa fa-pencil-square-o"></i></a>
+                    <a data-bind="click: handleOpen('#externalPayrollDialog')">edit <i class="fa fa-pencil-square-o"></i></a>
                 </li>
             </ul>
         </div>
@@ -102,18 +102,18 @@
         <div class="oj-col oj-md-3 oj-lg-3 profileToolBar">
            <h4>Home Store</h4>
            <span data-bind="text: personProfile().homeStore"></span>
-           <a data-bind="click: $parents[0].handleOpen('#homeStoreDialog')">transfer <i class="fa fa-share"></i>
+           <a data-bind="click: handleOpen('#homeStoreDialog')">transfer <i class="fa fa-share"></i>
 </a>
         </div>
         <div class="oj-col oj-md-3 oj-lg-3 profileToolBar">
            <h4>Hire Status</h4>
            <span data-bind="text: personProfile().hireStatus"></span>
-           <a data-bind="click: $parents[0].handleOpen('#hireStatusDialog')">update</a>
+           <a data-bind="click: handleOpen('#hireStatusDialog')">update</a>
         </div>
         <div class="oj-col oj-md-3 oj-lg-3 profileToolBar">
            <h4>External Payroll ID</h4>
            <span data-bind="text: personProfile().externalPayrollId"></span>
-           <a data-bind="click: $parents[0].handleOpen('#externalPayrollDialog')">edit <i class="fa fa-pencil-square-o"></i></a>
+           <a data-bind="click: handleOpen('#externalPayrollDialog')">edit <i class="fa fa-pencil-square-o"></i></a>
         </div>
     </div>
 </div>
