--- a/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-small.tmpl.html
+++ b/OracleJETApplication/templates/partials/add-employee-modal/add-employee-modal-small.tmpl.html
@@ -1,4 +1,6 @@
 <div style="display:none;" id="addEmpStatusDialog" data-bind="ojComponent:{component: 'ojDialog', initialVisibility: 'hide', 
+            rootAttributes: {style: 'width: 375px; height: 600px;'}, 
+            'position': {'my': 'right center', 'at': 'left center'}}">
             rootAttributes: {style: 'width: 375px; height: 600px;'},
             'position': {'at': 'top'}}">
     <div class="oj-dialog-header oj-helper-clearfix" aria-labelledby="dialogTitleId">
