--- a/OracleJETApplication/templates/profile.tmpl.html
+++ b/OracleJETApplication/templates/profile.tmpl.html
@@ -4,7 +4,8 @@
     <div class="oj-sm-12 oj-col app-header-mobile-nav-title" data-bind="if: tabRouter.stateId(), click:toggleSections">
         <div data-bind="with: tabRouter.currentState()">
             <div class="mobileNavTitleArea">
-                <span id="currentPage" data-bind="text: label"></span>
+                <span class="oj-sm-11 oj-col" id="currentPage" data-bind="text: label"></span><span class="oj-sm-1 oj-col"><i class="fa fa-chevron-down"></i></span>
+
             </div>
         </div>
     </div>
