updated footer on login page

--- a/OracleJETApplication/scss/oj-override.scss
+++ b/OracleJETApplication/scss/oj-override.scss
@@ -1757,6 +1757,9 @@ float:left;
             -webkit-border-radius: 50%;
             border-radius: 50%;
         }
+        .footer{
+            text-align:right;
+        }
     }
 }
 
