Updated profile>payroll edit modal section

--- a/OracleJETApplication/templates/profile/payroll/payroll-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/payroll/payroll-large.tmpl.html
@@ -42,6 +42,9 @@
                 <div>Child Labor Law Requirements (Age 16)</div>
             </div>
             <div class="oj-col oj-md-6 oj-lg-4">
+                <div class="oj-col oj-md-12">INS Status</div>
+                <div class="oj-col oj-md-12" data-bind="text:$parent.insstatus()"></div>
+
                 <div class="oj-col oj-md-12">Admission Number</div>
                 <div class="oj-col oj-md-12">
 <!--                    <input data-bind="ojComponent: {component: 'ojInputText', value: ''}" />-->
