updated for schedule onclick

--- a/OracleJETApplication/templates/profile/schedules-timecards/current-week-modal/current-week-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/current-week-modal/current-week-modal-large.tmpl.html
@@ -9,7 +9,7 @@
                        <div data-bind="click:function(){alert($parent.selectedSchedule.currentDayEnd);}">hello</div>   
   
 
-        <div data-bind="text:$parent.selectedSchedule['id']"></div>
+        <div data-bind="text:$parent.selectedSchedule.currentDayEnd"></div>
 
 
 
