--- a/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
@@ -21,8 +21,8 @@
                 </div>
                 <div class="oj-md-6 oj-col emailAndPringDiv">
                     <ul class="scheduleToolArea">
-                        <li id="email"><a href="#"><span class="fa fa-envelope-o"></span> Email</span></a></li>
-                        <li id="print"><a href="#"><span class="fa fa-print""></span> Print</span></a></li>
+                        <li id="email"><a href="#"><span class="fa fa-envelope-o"> Email</span></a></li>
+                        <li id="print"><a href="#"><span class="fa fa-print"> Print</span></a></li>
                     </ul>
                 </div>
 
@@ -64,8 +64,8 @@
                 </div>
                 <div class="oj-md-6 oj-col emailAndPringDiv">
                     <ul class="scheduleToolArea"> 
-                        <li id="email"><a href="#"><span class="fa fa-envelope-o"></span> Email</span></a></li>
-                        <li id="print"><a href="#"><span class="fa fa-print""></span> Print</span></a></li>
+                        <li id="email"><a href="#"><span class="fa fa-envelope-o"> Email</span></a></li>
+                        <li id="print"><a href="#"><span class="fa fa-print"> Print</span></a></li>
                     </ul>
                 </div>
 
